tests/error/ptr_arg_array.gw
#! [contains] array must be empty
funptr void my_func (int[4] i);
